--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div id="background-container">
-	 		<img class="background-picture" id="pic1" src="assets/img/1.jpg"></img>
+	 		<img class="background-picture" id="pic1" src="assets/img/1.JPG"></img>
 			<!--img class="background-picture" id="pic2" src="assets/img/2.jpg"></img>
 			<img src="assets/img/3.jpg" id="pic3" class="background-picture"></img>
 			<img src="assets/img/4.jpg" id="pic4" class="background-picture"></img>
