--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 		 		<div id="menu">
 		 			<div id="box"></div>
 				 	<ul id="dropdown-menu">
-				 		<li class="menu-item"><a href="../home/index.html">home</a></li>
+				 		<li class="menu-item"><a href="../index.html">home</a></li>
 						<li class="menu-item"><a href="../gallery/index.html">gallery</a></li>
 					</ul>
 				</div>
