--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<!--div id="for-kevin">YOU CAN DO IT</div-->
 		<div id="header">
-			<img class="background-pic" src="assets/img/1.jpg"></img>
+			<img class="background-pic" src="assets/img/1.JPG"></img>
 		 	<div id="title">about</div>
 		 	<div id="nav-menu">
 		 		<div id="delia">delia peterson</div>
@@ -25,23 +25,23 @@
 			</div>
 		</div>
 		<div class="section">
-			<img class="background-pic" src="assets/img/2.jpg"></img>
+			<img class="background-pic" src="assets/img/2.JPG"></img>
 			<div class="words" id="pt-1">delia peterson is a student at uc berkeley who loves taking pictures of cool things</div>
 		</div>
 		<div class="section">
-			<img class="background-pic" src="assets/img/3.jpg"></img>
+			<img class="background-pic" src="assets/img/3.JPG"></img>
 			<div class="words" id="pt-2">she's been aware of her passion for photography ever since she won a photo contest in 6th grade</div>
 		</div>
 		<div class="section">
-			<img class="background-pic" src="assets/img/4.jpg"></img>
+			<img class="background-pic" src="assets/img/4.JPG"></img>
 			<div class="words" id="pt-3">her favorite things to take pictures of are animals and her friends</div>
 		</div>
 		<div class="section">
-			<img class="background-pic" src="assets/img/5.jpg"></img>
+			<img class="background-pic" src="assets/img/5.JPG"></img>
 			<div class="words" id="pt-4">her dream is to travel and take pictures of the world</div>
 		</div>
 		<div class="section">
-			<img class="background-pic" src="assets/img/6.jpg"></img>
+			<img class="background-pic" src="assets/img/6.JPG"></img>
 			<div class="words" id="pt-5">you can contact her by email at sdeliapeterson@berkeley.edu</div>
 			<div id="top-arrow">
 				<img id="arrow" src="assets/img/arrow.png"></img>
