--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,7 +13,7 @@
 		<div id="modal container">
 			<div id="modal-overlay"></div>
 			<div id="modal-box">
-				<img class="modal-img" src="assets/img/1.jpg"></img>
+				<img class="modal-img" src="assets/img/1.JPG"></img>
 			</div>
 		</div>
 		<div id="grid">
@@ -52,7 +52,7 @@
 				<img class="img" src="assets/img/10.jpg"></img>
 			</div>
 			<div class="grid-item">
-				<a class="link" href="../home/index.html">home</a>
+				<a class="link" href="../index.html">home</a>
 			</div>
 			<div class="grid-item">
 				<img class="img" src="assets/img/11.jpg"></img>
