--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<div id="menu">
 			<div id="title">delia peterson</div>
 			<ul id="dropdown-menu">
-				<li class="menu-item"><a href="gallery/index.html">gallery</a></li>
-				<li class="menu-item"><a href="about/index.html">about</a></li>
+				<li class="menu-item"><a href="../gallery/index.html">gallery</a></li>
+				<li class="menu-item"><a href="../about/index.html">about</a></li>
 			</div>
 		</div>
 	</body>
