--- a/about/index.html
+++ b/about/index.html
@@ -17,6 +17,7 @@
 		 		<div id="menu">
 		 			<div id="box"></div>
 				 	<ul id="dropdown-menu">
+						<li class="menu-item"><a href="../index.html">home</a></li>
 						<li class="menu-item"><a href="../gallery/index.html">gallery</a></li>
 					</ul>
 				</div>
@@ -26,22 +27,18 @@
 			<div class="words" id="pt-1">delia peterson is a student at uc berkeley who loves taking pictures of cool things</div>
 		</div>
 		<div class="section">
-			<img class="background-pic" src="assets/img/3.jpg"></img>
 			<img class="background-pic" src="assets/img/3.JPG"></img>
 			<div class="words" id="pt-2">she's been aware of her passion for photography ever since she won a photo contest in 6th grade</div>
 		</div>
 		<div class="section">
-			<img class="background-pic" src="assets/img/4.jpg"></img>
 			<img class="background-pic" src="assets/img/4.JPG"></img>
 			<div class="words" id="pt-3">her favorite things to take pictures of are animals and her friends</div>
 		</div>
 		<div class="section">
-			<img class="background-pic" src="assets/img/5.jpg"></img>
 			<img class="background-pic" src="assets/img/5.JPG"></img>
 			<div class="words" id="pt-4">her dream is to travel and take pictures of the world</div>
 		</div>
 		<div class="section">
-			<img class="background-pic" src="assets/img/6.jpg"></img>
 			<img class="background-pic" src="assets/img/6.JPG"></img>
 			<div class="words" id="pt-5">you can contact her by email at sdeliapeterson@berkeley.edu</div>
 			<div id="top-arrow">
