--- a/about/index.html
+++ b/about/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<!--div id="for-kevin">YOU CAN DO IT</div-->
 		<div id="header">
+			<img class="background-pic" src="assets/img/1.JPG"></img>
 		 	<div id="title">about</div>
 		 	<div id="nav-menu">
 		 		<div id="delia">delia peterson</div>
@@ -24,6 +25,7 @@
 			</div>
 		</div>
 		<div class="section">
+			<img class="background-pic" src="assets/img/2.JPG"></img>
 			<div class="words" id="pt-1">delia peterson is a student at uc berkeley who loves taking pictures of cool things</div>
 		</div>
 		<div class="section">
