--- a/gallery/index.html
+++ b/gallery/index.html
@@ -25,145 +25,145 @@
 		<div id="grid">
 			<div class="grid-sizer"></div>
 			<div class="grid-item">
-				<img class="img" id="1" src="assets/img/1.jpg"></img>
+				<img class="img" id="1" src="assets/img/1.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="2" src="assets/img/2.jpg"></img>
+				<img class="img" id="2" src="assets/img/2.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="3" src="assets/img/3.jpg"></img>
+				<img class="img" id="3" src="assets/img/3.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="4" src="assets/img/4.jpg"></img>
+				<img class="img" id="4" src="assets/img/4.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="5" src="assets/img/5.jpg"></img>
+				<img class="img" id="5" src="assets/img/5.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="6" src="assets/img/6.jpg"></img>
+				<img class="img" id="6" src="assets/img/6.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="7" src="assets/img/7.jpg"></img>
+				<img class="img" id="7" src="assets/img/7.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<div id="delia">delia peterson</div>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="8" src="assets/img/8.jpg"></img>
+				<img class="img" id="8" src="assets/img/8.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="9" src="assets/img/9.jpg"></img>
+				<img class="img" id="9" src="assets/img/9.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="10" src="assets/img/10.jpg"></img>
+				<img class="img" id="10" src="assets/img/10.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<a class="link" href="../index.html">home</a>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="11" src="assets/img/11.jpg"></img>
+				<img class="img" id="11" src="assets/img/11.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="12" src="assets/img/12.jpg"></img>
+				<img class="img" id="12" src="assets/img/12.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="13" src="assets/img/13.jpg"></img>
+				<img class="img" id="13" src="assets/img/13.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="14" src="assets/img/14.jpg"></img>
+				<img class="img" id="14" src="assets/img/14.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="15" src="assets/img/15.jpg"></img>
+				<img class="img" id="15" src="assets/img/15.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="16" src="assets/img/16.jpg"></img>
+				<img class="img" id="16" src="assets/img/16.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<a class="link" href="../about/index.html">about</a>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="17" src="assets/img/17.jpg"></img>
+				<img class="img" id="17" src="assets/img/17.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="18" src="assets/img/18.jpg"></img>
+				<img class="img" id="18" src="assets/img/18.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="19" src="assets/img/19.jpg"></img>
+				<img class="img" id="19" src="assets/img/19.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="20" src="assets/img/20.jpg"></img>
+				<img class="img" id="20" src="assets/img/20.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="21" src="assets/img/21.jpg"></img>
+				<img class="img" id="21" src="assets/img/21.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="22" src="assets/img/22.jpg"></img>
+				<img class="img" id="22" src="assets/img/22.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="23" src="assets/img/23.jpg"></img>
+				<img class="img" id="23" src="assets/img/23.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="24" src="assets/img/24.jpg"></img>
+				<img class="img" id="24" src="assets/img/24.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="25" src="assets/img/25.jpg"></img>
+				<img class="img" id="25" src="assets/img/25.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="26" src="assets/img/26.jpg"></img>
+				<img class="img" id="26" src="assets/img/26.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="27" src="assets/img/27.jpg"></img>
+				<img class="img" id="27" src="assets/img/27.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="28" src="assets/img/28.jpg"></img>
+				<img class="img" id="28" src="assets/img/28.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="29" src="assets/img/29.jpg"></img>
+				<img class="img" id="29" src="assets/img/29.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="30" src="assets/img/30.jpg"></img>
+				<img class="img" id="30" src="assets/img/30.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="31" src="assets/img/31.jpg"></img>
+				<img class="img" id="31" src="assets/img/31.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="32" src="assets/img/32.jpg"></img>
+				<img class="img" id="32" src="assets/img/32.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="33" src="assets/img/33.jpg"></img>
+				<img class="img" id="33" src="assets/img/33.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="34" src="assets/img/34.jpg"></img>
+				<img class="img" id="34" src="assets/img/34.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="35" src="assets/img/35.jpg"></img>
+				<img class="img" id="35" src="assets/img/35.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="36" src="assets/img/36.jpg"></img>
+				<img class="img" id="36" src="assets/img/36.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="37" src="assets/img/37.jpg"></img>
+				<img class="img" id="37" src="assets/img/37.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="38" src="assets/img/38.jpg"></img>
+				<img class="img" id="38" src="assets/img/38.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="39" src="assets/img/39.jpg"></img>
+				<img class="img" id="39" src="assets/img/39.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="40" src="assets/img/40.jpg"></img>
+				<img class="img" id="40" src="assets/img/40.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="41" src="assets/img/41.jpg"></img>
+				<img class="img" id="41" src="assets/img/41.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="42" src="assets/img/42.jpg"></img>
+				<img class="img" id="42" src="assets/img/42.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="43" src="assets/img/43.jpg"></img>
+				<img class="img" id="43" src="assets/img/43.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="44" src="assets/img/44.jpg"></img>
+				<img class="img" id="44" src="assets/img/44.JPG"></img>
 			</div>
 			<div id="top-arrow">
 				<img id="arrow" src="assets/img/arrow.png"></img>
