--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 		  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		  <script src="assets/js/Vague.js">
-        </script> 
-        <script src="assets/js/script.js"></script>	
+		  <script src="assets/js/Vague.js"></script> 
+        	<script src="assets/js/script.js"></script>	
 	</head>
 	<body>
 		<div id="background-container">
