--- a/gallery/index.html
+++ b/gallery/index.html
@@ -22,7 +22,7 @@
 		<div id="grid">
 			<div class="grid-sizer"></div>
 			<div class="grid-item">
-				<img class="img" id="1" src="assets/img/1.jpg"></img>
+				<img class="img" id="1" src="assets/img/1.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<img class="img" id="2" src="assets/img/2.JPG"></img>
@@ -61,7 +61,7 @@
 				<img class="img" id="11" src="assets/img/11.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="12" src="assets/img/12.jpg"></img>
+				<img class="img" id="12" src="assets/img/12.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<img class="img" id="13" src="assets/img/13.JPG"></img>
@@ -79,10 +79,10 @@
 				<a class="link" href="../about/index.html">about</a>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="17" src="assets/img/17.jpg"></img>
+				<img class="img" id="17" src="assets/img/17.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="18" src="assets/img/18.jpg"></img>
+				<img class="img" id="18" src="assets/img/18.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<img class="img" id="19" src="assets/img/19.JPG"></img>
@@ -109,7 +109,7 @@
 				<img class="img" id="26" src="assets/img/26.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="27" src="assets/img/27.jpg"></img>
+				<img class="img" id="27" src="assets/img/27.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<img class="img" id="28" src="assets/img/28.JPG"></img>
@@ -121,13 +121,13 @@
 				<img class="img" id="30" src="assets/img/30.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="31" src="assets/img/31.jpg"></img>
+				<img class="img" id="31" src="assets/img/31.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<img class="img" id="32" src="assets/img/32.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="33" src="assets/img/33.jpg"></img>
+				<img class="img" id="33" src="assets/img/33.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<img class="img" id="34" src="assets/img/34.JPG"></img>
@@ -154,13 +154,13 @@
 				<img class="img" id="41" src="assets/img/41.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="42" src="assets/img/42.jpg"></img>
+				<img class="img" id="42" src="assets/img/42.JPG"></img>
 			</div>
 			<div class="grid-item">
 				<img class="img" id="43" src="assets/img/43.JPG"></img>
 			</div>
 			<div class="grid-item">
-				<img class="img" id="44" src="assets/img/44.jpg"></img>
+				<img class="img" id="44" src="assets/img/44.JPG"></img>
 			</div>
 			<div id="top-arrow">
 				<img id="arrow" src="assets/img/arrow.png"></img>
