--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,10 +13,9 @@
 		<div id="modal-container">
 			<div id="modal-overlay"></div>
 			<div id="modal-box">
-				<img class="modal-img" src="x">
+				<img class="modal-img" src="x"></img>
 					<img id="cancel" src="assets/img/cancel.png"></img>
 				</img>
-				<img class="modal-img" src="assets/img/1.JPG"></img>
 			</div>
 		</div>
 		<div id="grid">
